front/src/css/cube.css
@layer reset, vars, default, dark, compositions, utilities, blocks;

@import "@fontsource/azeret-mono/variable.css";
@import "@fontsource/inter/variable.css";
@import "reset.css" layer(reset);
@import "custom-props.css" layer(vars);

@import "_compositions.css" layer(compositions);
@import "_blocks.css" layer(blocks);
@import "_utilities.css" layer(utilities);
@font-face {
  font-family: "Anicons";
  src: url("/AniconsGX.ttf") format("truetype");
}

@tailwind utilities;

@layer dark {
  .dark {
    h1 {
      color: blue;
    }
  }
}

@layer default {
  /* Global styles */
  :root {
    /* Content from top */
    --margin-top: var(--space-m);
    --avatar-size: var(--space-xl);
    --avatar-plus-margin-top: calc(var(--margin-top) + var(--avatar-size));
    /* sidebar.css */
    --gutter: var(--space-2xs);
    --sidebar-target-width: var(--space-sidebar);
    --sidebar-content-min-width: 65%;
    /* content area */
    --sticker-width: 60px;
    /* scrollbar */
    --scrollbar-primary-color: green;
    --text-color: yellow;
  }

  body {
    @apply bg-light text-dark text-0 font-sans overflow-x-hidden;
  }

  ::-webkit-scrollbar {
    width: 0.5rem;
  }
  ::-webkit-scrollbar-thumb {
    background: linear-gradient(
      var(--scrollbar-primary-color),
      var(--text-color)
    );
    border-radius: 4px;
  }

  h1,
  h2,
  h3 {
    line-height: 1.1;
    font-weight: 900;
  }

  h1 {
    @apply text-4;
  }

  h2 {
    @apply text-3;
  }

  h3 {
    @apply text-2;
  }

  p,
  li {
    max-width: 70ch;
  }

  h1 {
    max-width: 15ch;
  }

  h2,
  h3 {
    max-width: 30ch;
  }

  a {
    color: currentcolor;
    text-decoration-color: var(--color-primary);
  }

  a:hover {
    text-decoration: none;
  }

  /* Prose */
  h2,
  h3 {
    --flow-space: var(--space-size-3);
  }

  h2 + *,
  h3 + * {
    --flow-space: var(--space-base);
  }

  /* So text scale renders nicely */
  div[class*="text-"] {
    --flow-space: 1rem;
    line-height: 1;
    font-weight: 700;
  }
}

